etc/tests/error/heap/unknown-policy.ny
;; flags: --heap=wat
;; expect: invalid heap policy: wat
print(1)
